[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=3]
[ext_resource path="res://assets/PNG/weapon_silencer.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "MuzzleFlash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )
bullet = ExtResource( 2 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 19, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 27, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 1.2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/MuzzleFlash = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
